--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 email=info@mylandmarktech.com
 ##always-auth=true
-_//registry.npmjs.org/:_auth=YWRtaW46YWRtaW4xMjM=
+//registry.npmjs.org/:_auth=YWRtaW46YWRtaW4xMjM=
 allowRepublish=true
